menu and view overlap fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,7 +15,7 @@
     flex-grow: 1;
     overflow-y: auto;
     background: linear-gradient(rgba(0, 0, 0, 0.06) 0px, rgba(0, 0, 0, 0) 50px);
-    margin-bottom: 80px;
+    padding-bottom: 80px;
 
     /* Firefox scrollbar styling */
     scrollbar-width: thin;
